made major updates

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/nsd.png" />
+    <link rel="icon" type="image/png" href="https://i.ibb.co/GQ788S34/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NSD AUTOS - Modern Car Dealership </title>
+    <title>NSD AUTOS - Modern Car Dealership Website</title>
   </head>
   <body>
     <div id="root"></div>
